cmake_minimum_required(VERSION 3.16)
project(advent2021)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG_INIT "-Wall -Werror -g3 -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE_INIT "-Wall -Werror -O2")

add_executable(d01p1 day01/part1.cc)
add_executable(d01p2 day01/part2.cc)
add_executable(d02p1 day02/part1.cc)
add_executable(d02p2 day02/part2.cc)
add_executable(d03p1 day03/part1.cc)
add_executable(d03p1-count_if day03/part1-count_if.cc)
add_executable(d03p2 day03/part2.cc)
add_executable(d04p1 day04/part1.cc)
add_executable(d04p2 day04/part2.cc)
add_executable(d05p1 day05/part1.cc day05/path.cc day05/path.h)
add_executable(d05p2 day05/part2.cc day05/path.cc day05/path.h)
