cmake_minimum_required(VERSION 3.16)
project(advent2021)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG_INIT "-Wall -Werror -g3 -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE_INIT "-Wall -Werror -O2")

add_executable(d01p1 day01/part1.cc)
add_executable(d01p2 day01/part2.cc)
add_executable(d02p1 day02/part1.cc)
add_executable(d02p2 day02/part2.cc)
add_executable(d03p1 day03/part1.cc)
add_executable(d03p1-count_if day03/part1-count_if.cc)
add_executable(d03p2 day03/part2.cc)
add_executable(d04p1 day04/part1.cc)
add_executable(d04p2 day04/part2.cc)
add_executable(d05p1 day05/part1.cc day05/path.cc day05/path.h)
add_executable(d05p2 day05/part2.cc day05/path.cc day05/path.h)
add_executable(d06p1 day06/part1.cc)
add_executable(d06p2 day06/part2.cc)
add_executable(d07p1 day07/part1.cc)
add_executable(d07p2 day07/part2.cc)
add_executable(d08p1 day08/part1.cc day08/Segment.cc day08/Segment.h)
add_executable(d08p2 day08/part2.cc day08/Segment.cc day08/Segment.h)
add_executable(d09p1 day09/part1.cc)
add_executable(d09p2 day09/part2.cc)
add_executable(d10p1 day10/part1.cc)
add_executable(d10p2 day10/part2.cc)
add_executable(d11p1 day11/part1.cc)
add_executable(d11p2 day11/part2.cc)
add_executable(d12p1 day12/part1.cc day12/vertex.cc day12/graph.cc day12/path.cc)
add_executable(d12p2 day12/part2.cc day12/vertex.cc day12/graph.cc day12/path.cc)
